Fix css @media
- .sedan element was spanning too far at full browser width

--- a/resources/style.css
+++ b/resources/style.css
@@ -49,9 +49,10 @@ span {
     }
 }
 
-/* might use as baseline for desktop */
-.wrapper {
-    margin-top: 25vh
+@media screen and (min-width: 930px) {
+    .wrapper {
+        margin-top: 21vh;
+    }
 }
 
 .container {
@@ -89,22 +90,22 @@ span {
 
 @media screen and (min-width: 650px) {
     .sedan {
-        padding: 0 10% 0 0;
-        margin: 0 -10% 0 0;
+        padding: 0 2em 0 0;
+        margin: 0 -2em 0 0;
     }
 }
 
 @media screen and (min-width: 930px) {
     .sedan {
-        padding: 0 35% 0 0;
-        margin: 0 -35% 0 0;
+        padding: 0 32em 0 0;
+        margin: 0 -32em 0 0;
     }
 }
 
 @media screen and (max-width: 645px) {
     .sedan {
-        padding: 0 0 115% 0;
-        margin: 0 0 -115% 0;
+        padding: 0 0 52em 0;
+        margin: 0 0 -52em 0;
     }
 }
 
